src/tests/fixtures/type_definitions/ClassTypeWithEmptyImplementsTag.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlType
 * @gqlImplements
 */
export default class User {
  /** @gqlField */
  name(): string {
    return "Samantha";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions/ClassTypeWithEmptyImplementsTag.invalid.ts:3:4 - error: Expected `@gqlImplements` to be followed by one or more interface names.

3  * @gqlImplements
     ~~~~~~~~~~~~~~
4  */
  ~
